--- a/free-nodes/2026-2-18-node-share.htm
+++ b/free-nodes/2026-2-18-node-share.htm
@@ -148,24 +148,24 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
 <h4>FAQ</h4>
 <div class="panel panel-default">
+    <div class="panel-heading"><h5>Matsuri 的延迟测试准确吗？</h5></div>
+    <div class="panel-body">
+        Matsuri 的延迟测试使用 ICMP 与 TCP 双重检测方式，可较准确反映节点实际响应时间。不过受网络波动影响，建议多次测试并结合速度测试结果综合判断。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>VLess 为什么被认为是未来趋势？</h5></div>
+    <div class="panel-body">
+        VLess 去掉了内置加密层，改为依赖外部 TLS 进行安全通信，这使其更轻量化且更灵活。它能与 Hysteria、Reality 等现代传输方式结合使用，适应性更强，是取代 Vmess 的新标准。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>PassWall2 如何自动切换最优节点？</h5></div>
+    <div class="panel-body">
+        PassWall2 会定期测试节点延迟和丢包率，并结合策略组自动切换到最优节点。无需手动干预即可保证网页、视频和游戏流量高速稳定访问，优化整体网络体验。<hr />    </div>
+</div>
+<div class="panel panel-default">
     <div class="panel-heading"><h5>V2Ray 与 Clash 有什么区别？</h5></div>
     <div class="panel-body">
         V2Ray 是一款代理核心工具，提供底层网络传输和加密支持；而 Clash 是一个多协议客户端，可以整合 V2Ray、Trojan、Shadowsocks 等多种协议。简而言之，V2Ray 负责“传输”，Clash 负责“管理与分流”。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Potatso Lite 手动节点切换有哪些优点？</h5></div>
-    <div class="panel-body">
-        手动切换节点可以根据延迟和用途选择最佳节点，适合在节点不稳定或特殊需求下使用。虽然不支持自动订阅更新，但足够满足轻量用户对节点管理和分流的需求。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>VMess AEAD 加密在安全性方面有何优势？</h5></div>
-    <div class="panel-body">
-        AEAD 加密可防止数据篡改、重放攻击和流量特征泄露。在高封锁环境下保证节点可用，提升数据安全和连接稳定性，同时降低被检测风险，确保长期安全访问。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Shadowrocket 节点延迟排序功能如何提升访问体验？</h5></div>
-    <div class="panel-body">
-        Shadowrocket 会测速节点延迟和丢包率，并优先使用低延迟节点。结合策略组和分流规则，可保证网页、视频和游戏流量通过最优节点，提高访问速度和稳定性。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>VLESS + XTLS 在高延迟网络中如何优化连接？</h5></div>
@@ -173,14 +173,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         XTLS 模式通过减少握手和加密开销降低延迟。结合策略组和多节点切换，可在高延迟或不稳定网络环境下保证网页浏览、视频播放和游戏连接稳定，提高用户体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Matsuri 的延迟测试准确吗？</h5></div>
+    <div class="panel-heading"><h5>VMess AEAD 加密在安全性方面有何优势？</h5></div>
     <div class="panel-body">
-        Matsuri 的延迟测试使用 ICMP 与 TCP 双重检测方式，可较准确反映节点实际响应时间。不过受网络波动影响，建议多次测试并结合速度测试结果综合判断。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>PassWall2 如何自动切换最优节点？</h5></div>
-    <div class="panel-body">
-        PassWall2 会定期测试节点延迟和丢包率，并结合策略组自动切换到最优节点。无需手动干预即可保证网页、视频和游戏流量高速稳定访问，优化整体网络体验。<hr />    </div>
+        AEAD 加密可防止数据篡改、重放攻击和流量特征泄露。在高封锁环境下保证节点可用，提升数据安全和连接稳定性，同时降低被检测风险，确保长期安全访问。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>如何识别节点是否被封锁或限速？</h5></div>
@@ -193,9 +188,14 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         VMess 连接不稳定可能由节点延迟过高、服务器防火墙、TLS 配置错误或 ISP 丢包引起。建议测试不同传输协议（如 WS、gRPC）或切换节点，检查日志确认具体错误信息。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>VLess 为什么被认为是未来趋势？</h5></div>
+    <div class="panel-heading"><h5>Potatso Lite 手动节点切换有哪些优点？</h5></div>
     <div class="panel-body">
-        VLess 去掉了内置加密层，改为依赖外部 TLS 进行安全通信，这使其更轻量化且更灵活。它能与 Hysteria、Reality 等现代传输方式结合使用，适应性更强，是取代 Vmess 的新标准。    </div>
+        手动切换节点可以根据延迟和用途选择最佳节点，适合在节点不稳定或特殊需求下使用。虽然不支持自动订阅更新，但足够满足轻量用户对节点管理和分流的需求。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Shadowrocket 节点延迟排序功能如何提升访问体验？</h5></div>
+    <div class="panel-body">
+        Shadowrocket 会测速节点延迟和丢包率，并优先使用低延迟节点。结合策略组和分流规则，可保证网页、视频和游戏流量通过最优节点，提高访问速度和稳定性。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -224,16 +224,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2026-2-9-free-vpn-node.htm" title="VPN设备 | 2月9日21.5M/S|免费VPN/Shadowrocket节点/Trojan节点/SSR节点/V2ray节点/Clash节点/Singbox节点免费节点订阅分享">VPN设备 | 2月9日21.5M/S|免费VPN/Shadowrocket节点/Trojan节点/SSR节点/V2ray节点/Clash节点/Singbox节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-21-node-share.htm" title="VPN设备 | 1月21日22.6M/S|免费VPN/Singbox节点/Shadowrocket节点/SSR节点/Clash节点/Trojan节点/V2ray节点免费节点订阅分享">VPN设备 | 1月21日22.6M/S|免费VPN/Singbox节点/Shadowrocket节点/SSR节点/Clash节点/Trojan节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-6-top-vpn-node.htm" title="VPN设备 | 2月6日20.3M/S|免费VPN/Trojan节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点免费节点订阅分享">VPN设备 | 2月6日20.3M/S|免费VPN/Trojan节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-16-vpn-free.htm" title="VPN设备 | 2月16日20.5M/S|免费VPN/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 2月16日20.5M/S|免费VPN/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-31-top-vpn.htm" title="VPN设备 | 1月31日22.3M/S|免费VPN/V2ray节点/Trojan节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 1月31日22.3M/S|免费VPN/V2ray节点/Trojan节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-3-vpn-node.htm" title="VPN设备 | 2月3日20.4M/S|免费VPN/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Trojan节点免费节点订阅分享">VPN设备 | 2月3日20.4M/S|免费VPN/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Trojan节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-14-node-share.htm" title="VPN设备 | 2月14日19.2M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/Trojan节点/SSR节点免费节点订阅分享">VPN设备 | 2月14日19.2M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/Trojan节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-18-node-share.htm" title="VPN设备 | 2月18日19.8M/S|免费VPN/SSR节点/Shadowrocket节点/Clash节点/Trojan节点/Singbox节点/V2ray节点免费节点订阅分享">VPN设备 | 2月18日19.8M/S|免费VPN/SSR节点/Shadowrocket节点/Clash节点/Trojan节点/Singbox节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-7-free-vpn.htm" title="VPN设备 | 2月7日22M/S|免费VPN/V2ray节点/Singbox节点/SSR节点/Trojan节点/Shadowrocket节点/Clash节点免费节点订阅分享">VPN设备 | 2月7日22M/S|免费VPN/V2ray节点/Singbox节点/SSR节点/Trojan节点/Shadowrocket节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-30-free-vpn.htm" title="VPN设备 | 1月30日18.1M/S|免费VPN/Trojan节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享">VPN设备 | 1月30日18.1M/S|免费VPN/Trojan节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-25-free-vpn.htm" title="VPN设备 | 2月25日18.4M/S|免费VPN/Trojan节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 2月25日18.4M/S|免费VPN/Trojan节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-17-free-node-subscribe.htm" title="VPN设备 | 2月17日18.1M/S|免费VPN/Trojan节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点免费节点订阅分享">VPN设备 | 2月17日18.1M/S|免费VPN/Trojan节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-21-top-vpn.htm" title="VPN设备 | 2月21日18.6M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 2月21日18.6M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-29-free-node-subscribe.htm" title="VPN设备 | 1月29日20.8M/S|免费VPN/Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点/Trojan节点免费节点订阅分享">VPN设备 | 1月29日20.8M/S|免费VPN/Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点/Trojan节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-20-top-vpn.htm" title="VPN设备 | 1月20日19.8M/S|免费VPN/Clash节点/Trojan节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点免费节点订阅分享">VPN设备 | 1月20日19.8M/S|免费VPN/Clash节点/Trojan节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-25-top-vpn.htm" title="VPN设备 | 1月25日21.6M/S|免费VPN/Trojan节点/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享">VPN设备 | 1月25日21.6M/S|免费VPN/Trojan节点/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-16-free-node-subscribe.htm" title="VPN设备 | 1月16日19.7M/S|免费VPN/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Clash节点免费节点订阅分享">VPN设备 | 1月16日19.7M/S|免费VPN/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-17-free-node-subscribe-links.htm" title="VPN设备 | 1月17日18.3M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点/Trojan节点免费节点订阅分享">VPN设备 | 1月17日18.3M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点/Trojan节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-4-free-vpn-node.htm" title="VPN设备 | 2月4日20.6M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Trojan节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 2月4日20.6M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Trojan节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -245,7 +245,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">18</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
