--- a/free-nodes/2026-2-21-top-vpn.htm
+++ b/free-nodes/2026-2-21-top-vpn.htm
@@ -146,29 +146,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
 <h4>FAQ</h4>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Nekoray 节点订阅自动更新如何设置？</h5></div>
-    <div class="panel-body">
-        用户可添加订阅 URL，Nekoray 会定期自动下载并更新节点列表。保持节点最新可减少手动维护，提高节点可用性和网络连接稳定性，确保科学上网体验顺畅。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>VLess 使用 XTLS 时证书怎么配置更安全？</h5></div>
-    <div class="panel-body">
-        推荐使用可信 CA 签发的证书（例如 Let's Encrypt），并为服务器配置正确的域名、SNI 与证书链。避免使用自签名证书或错误域名，以免被客户端拒绝或被中间人攻击检测到。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Trojan 的伪装域名有什么要求？</h5></div>
-    <div class="panel-body">
-        Trojan 的伪装域名必须是可以通过 HTTPS 正常访问的真实网站，并且 SSL 证书有效。伪装域名用于与服务器证书匹配，使得流量在外观上完全与正常 HTTPS 请求一致。<hr />    </div>
-</div>
-<div class="panel panel-default">
     <div class="panel-heading"><h5>Trojan 的伪装域名配置有哪些注意事项？</h5></div>
     <div class="panel-body">
         伪装域名必须真实可访问且证书有效，否则无法建立连接。正确配置可隐藏真实流量特征，降低被封锁和检测风险，提高节点安全性和长期可用性。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>如何在手机上减少代理应用对电量的消耗？</h5></div>
-    <div class="panel-body">
-        关闭不必要的后台代理连接，减少实时测速或心跳频率，启用省电模式并限制流量统计与日志记录；对于常用站点设置直连策略，避免所有流量都走代理带来的持续网络负荷。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Shadowrocket 支持哪几种代理协议？</h5></div>
@@ -176,9 +156,29 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         Shadowrocket 支持多种协议，包括 Shadowsocks、Vmess、VLess、Trojan、HTTP、SOCKS5 等。它还可解析部分 QuantumultX 与 Clash 的订阅格式，适合 iOS 用户进行全协议代理管理与切换。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Sing-box 如何实现流量精细分流？</h5></div>
+    <div class="panel-heading"><h5>Trojan 的伪装域名有什么要求？</h5></div>
     <div class="panel-body">
-        通过定义 routing 规则和策略组，Sing-box 可以根据域名、IP、端口或协议类型精细分流流量。例如视频走高速节点，网页走备用节点，实现流量优化和网络加速。<hr />    </div>
+        Trojan 的伪装域名必须是可以通过 HTTPS 正常访问的真实网站，并且 SSL 证书有效。伪装域名用于与服务器证书匹配，使得流量在外观上完全与正常 HTTPS 请求一致。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>V2Ray 的 Reality 功能是什么？</h5></div>
+    <div class="panel-body">
+        Reality 是 V2Ray 新增的伪装技术，可替代传统 TLS。它无需真实证书，通过公钥验证机制实现端到端加密。相比 Trojan 的 HTTPS 伪装方式，Reality 更轻量、安全且配置更简洁。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>VLess 使用 XTLS 时证书怎么配置更安全？</h5></div>
+    <div class="panel-body">
+        推荐使用可信 CA 签发的证书（例如 Let's Encrypt），并为服务器配置正确的域名、SNI 与证书链。避免使用自签名证书或错误域名，以免被客户端拒绝或被中间人攻击检测到。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Nekoray 节点订阅自动更新如何设置？</h5></div>
+    <div class="panel-body">
+        用户可添加订阅 URL，Nekoray 会定期自动下载并更新节点列表。保持节点最新可减少手动维护，提高节点可用性和网络连接稳定性，确保科学上网体验顺畅。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>如何在手机上减少代理应用对电量的消耗？</h5></div>
+    <div class="panel-body">
+        关闭不必要的后台代理连接，减少实时测速或心跳频率，启用省电模式并限制流量统计与日志记录；对于常用站点设置直连策略，避免所有流量都走代理带来的持续网络负荷。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>WinXray 的本地 PAC 模式与全局模式有什么区别？</h5></div>
@@ -191,9 +191,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         通过选择合适协议和混淆方式，将流量伪装成正常 HTTPS 或 HTTP 数据。可降低被 DPI 检测和封锁的风险，提高节点长期稳定性和科学上网体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>V2Ray 的 Reality 功能是什么？</h5></div>
+    <div class="panel-heading"><h5>Sing-box 如何实现流量精细分流？</h5></div>
     <div class="panel-body">
-        Reality 是 V2Ray 新增的伪装技术，可替代传统 TLS。它无需真实证书，通过公钥验证机制实现端到端加密。相比 Trojan 的 HTTPS 伪装方式，Reality 更轻量、安全且配置更简洁。    </div>
+        通过定义 routing 规则和策略组，Sing-box 可以根据域名、IP、端口或协议类型精细分流流量。例如视频走高速节点，网页走备用节点，实现流量优化和网络加速。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -222,16 +222,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2026-1-20-top-vpn.htm" title="VPN设备 | 1月20日19.8M/S|免费VPN/Clash节点/Trojan节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点免费节点订阅分享">VPN设备 | 1月20日19.8M/S|免费VPN/Clash节点/Trojan节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-2-top-vpn-node.htm" title="VPN设备 | 2月2日22.4M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/Trojan节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 2月2日22.4M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/Trojan节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-4-free-vpn-node.htm" title="VPN设备 | 2月4日20.6M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Trojan节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 2月4日20.6M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Trojan节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-20-node-share-links.htm" title="VPN设备 | 2月20日20.7M/S|免费VPN/Trojan节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 2月20日20.7M/S|免费VPN/Trojan节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-21-node-share.htm" title="VPN设备 | 1月21日22.6M/S|免费VPN/Singbox节点/Shadowrocket节点/SSR节点/Clash节点/Trojan节点/V2ray节点免费节点订阅分享">VPN设备 | 1月21日22.6M/S|免费VPN/Singbox节点/Shadowrocket节点/SSR节点/Clash节点/Trojan节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-16-vpn-free.htm" title="VPN设备 | 2月16日20.5M/S|免费VPN/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 2月16日20.5M/S|免费VPN/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-14-node-share.htm" title="VPN设备 | 2月14日19.2M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/Trojan节点/SSR节点免费节点订阅分享">VPN设备 | 2月14日19.2M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/Trojan节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-23-vpn-github.htm" title="VPN设备 | 1月23日21.2M/S|免费VPN/Clash节点/Singbox节点/Trojan节点/V2ray节点/Shadowrocket节点/SSR节点免费节点订阅分享">VPN设备 | 1月23日21.2M/S|免费VPN/Clash节点/Singbox节点/Trojan节点/V2ray节点/Shadowrocket节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-12-vpn-proxy.htm" title="VPN设备 | 2月12日20.8M/S|免费VPN/Singbox节点/Shadowrocket节点/Trojan节点/Clash节点/V2ray节点/SSR节点免费节点订阅分享">VPN设备 | 2月12日20.8M/S|免费VPN/Singbox节点/Shadowrocket节点/Trojan节点/Clash节点/V2ray节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-2-7-free-vpn.htm" title="VPN设备 | 2月7日22M/S|免费VPN/V2ray节点/Singbox节点/SSR节点/Trojan节点/Shadowrocket节点/Clash节点免费节点订阅分享">VPN设备 | 2月7日22M/S|免费VPN/V2ray节点/Singbox节点/SSR节点/Trojan节点/Shadowrocket节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-10-free-vpn.htm" title="VPN设备 | 2月10日22.5M/S|免费VPN/V2ray节点/SSR节点/Trojan节点/Clash节点/Shadowrocket节点/Singbox节点免费节点订阅分享">VPN设备 | 2月10日22.5M/S|免费VPN/V2ray节点/SSR节点/Trojan节点/Clash节点/Shadowrocket节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-23-vpn-proxy.htm" title="VPN设备 | 2月23日21.7M/S|免费VPN/Clash节点/Singbox节点/Shadowrocket节点/SSR节点/Trojan节点/V2ray节点免费节点订阅分享">VPN设备 | 2月23日21.7M/S|免费VPN/Clash节点/Singbox节点/Shadowrocket节点/SSR节点/Trojan节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-29-free-node-subscribe.htm" title="VPN设备 | 1月29日20.8M/S|免费VPN/Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点/Trojan节点免费节点订阅分享">VPN设备 | 1月29日20.8M/S|免费VPN/Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点/Trojan节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-1-share-vpn.htm" title="VPN设备 | 2月1日20.8M/S|免费VPN/Shadowrocket节点/SSR节点/Trojan节点/V2ray节点/Clash节点/Singbox节点免费节点订阅分享">VPN设备 | 2月1日20.8M/S|免费VPN/Shadowrocket节点/SSR节点/Trojan节点/V2ray节点/Clash节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-15-free-node-subscribe-links.htm" title="VPN设备 | 1月15日21.9M/S|免费VPN/V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 1月15日21.9M/S|免费VPN/V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-17-free-node-subscribe.htm" title="VPN设备 | 2月17日18.1M/S|免费VPN/Trojan节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点免费节点订阅分享">VPN设备 | 2月17日18.1M/S|免费VPN/Trojan节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-21-top-vpn.htm" title="VPN设备 | 2月21日18.6M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 2月21日18.6M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-26-top-vpn.htm" title="VPN设备 | 2月26日18.2M/S|免费VPN/V2ray节点/Clash节点/Trojan节点/Shadowrocket节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 2月26日18.2M/S|免费VPN/V2ray节点/Clash节点/Trojan节点/Shadowrocket节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-17-free-node-subscribe-links.htm" title="VPN设备 | 1月17日18.3M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点/Trojan节点免费节点订阅分享">VPN设备 | 1月17日18.3M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点/Trojan节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-15-free-vpn-node.htm" title="VPN设备 | 2月15日19.7M/S|免费VPN/Trojan节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点免费节点订阅分享">VPN设备 | 2月15日19.7M/S|免费VPN/Trojan节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -243,7 +243,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">18</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
